css/addtask.css
main {
    max-width: 1305px;
    display: flex;
    flex-direction: column;
    align-items: stretch;
}

.mainContainer {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
}

.mainSection {
    display: flex;
    flex-direction: row;
    align-items: flex-start;
    justify-content: flex-start;
    gap: 48.25px;
    margin-top: 48px;
}

.sectionLeft {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: flex-start;
    width: 440px;
    height: 376px;
    gap: 32px;
}

.sectionRight {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: flex-start;
}

.lowerSection {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: flex-end;
    margin-top: 146px;
    margin-bottom: 50px;

}

.title {
    height: 96px;
}

.description {
    height: 168px;
}

.dropDownAssignedOpened {
    display: flex;
    flex-direction: column;
    position: absolute;
    bottom: 56px;
    width: 440px;
    z-index: 2;
    padding-top: 0 !important;
}

.searchContactField {
    border: 1px solid var(--secondarycolor);
    display: flex;
}


.contactsDropDownMenu {
    display: flex;
    flex-direction: column;
    width: 100%;
    max-height: 288px;
    overflow-y: auto;
}

.dropDownContact {
    padding: 12px 16px;
    width: 100%;
    border-radius: 10px;
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.dropDownContact:hover {
    background-color: #F9F9F9;
}

.contactProfileBadge {
    font-size: 12px;
    border-radius: 50%;
    border: 2px solid white;
    padding: 12px;
    color: white;
    display: flex;
    align-items: center;
    justify-content: center;
    width: 42px;
    height: 42px;
    background-color: red;
}

.contactDetails {
    display: flex;
    align-items: center;
    gap: 16px;
}

.contactSelected {
    background-color: #2A3647 !important;
    color: white;
}

.inputBox {
    width: 440px;
    gap: 8px;
    display: flex;
    flex-direction: column;
}

.inputField {
    border-radius: 10px;
    border: solid 1px #D1D1D1;
    background-color: white;
    color: black !important;
    display: flex;
    align-items: flex-start;
    text-align: start;
    font-size: 20px;
    padding-top: 5px;
    cursor: pointer;
    word-wrap: break-word;
    resize: none;
    position: relative;
    width: 100%;

}

.inputField:focus {
    outline: 1px solid var(--secondarycolor);
}

.inputEmpty {
    outline: 1px solid red;
}

.messagebox {
    color: red;
    font-size: 10px;
    font-weight: 400;
    margin-top: 5px;
    margin-bottom: 17px;
    display: block;
    z-index: 100;
    width: 100%;
    height: 10px;
    padding-left: 5px;
}

.messageboxCategory {
    margin-bottom: 6px;
    margin-top: 0;
}

::placeholder {
    color: #D1D1D1;
    position: absolute;
    top: 12px;
    left: 21px;
}

.inputTitle {
    height: 48px;
    padding: 12px 21px 12px 21px;
}

.inputDescription {
    height: 120px;
    padding: 12px 16px 12px 16px;

}

.inputAssigned {
    height: 48px;
    padding: 10px 16px 10px 16px;
    color: #2A3647 !important;
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
    display: flex;
    justify-content: space-between;
    z-index: 2;
}

.inputCategory {
    height: 48px;
    padding: 10px 16px 10px 16px;
    color: #2A3647 !important;
}



.inputDate {
    color: #D1D1D1 !important;
    height: 48px;
    padding: 12px 16px 12px 16px;
    background-color: white;
}


input[type="date"]::-webkit-calendar-picker-indicator {
    background: url(/img/addtask/event.svg);
    background-repeat: no-repeat;
    background-position: 95%;
    background-size: 24px 24px;
}

.inputSubtaskContainer {
    display: flex;
    position: relative;
}

.inputSubtask {
    height: 48px;
    padding: 12px 16px 12px 16px;
    display: flex;
    justify-content: space-between;
    flex-direction: row;
}

.subtaskimg {
    height: 24px;
    width: 24px;
    position: absolute;
    right: 13px;
    margin-top: 12px;
    border-radius: 50px;
    padding: 5px;
    cursor: pointer;
}

.subtaskimg:hover {
    background-color: #F9F9F9;
}

.subTaskList {
    list-style-position: inside;

}

.subTaskList li {
    margin-bottom: 8px;
    cursor: pointer;
    padding: 6.5px 16px 6.5px 32px;
    border-radius: 10px;
}

.subTasksImgContainer {
    display: none;
    gap: 4px;
    float: right;
}

.subTaskList li:hover {
    background-color: #eeeeee;
}

.subTaskList li:hover .subTasksImgContainer {
    display: inline-flex;
}

.editSubtasks {
    display: flex;
}

.editSubtasksContainer {
    background-color: white;
    padding: 6.5px 23px 6.5px 32px;
    border: 1px solid var(--secondarycolor);
    border-radius: 10px;
}

.subTaskVerticalLine {
    height: 24px;
    width: 1px;
    background-color: #A8A8A8;
}

.editSubtaskIcon {
    border-radius: 50px;
    cursor: pointer;
}

.editSubtaskIcon:hover {
    background-color: #F9F9F9;
}

.typo {
    font-size: 20px;
    font-weight: 400px;
    line-height: 24px;
    color: #2A3647;
}

.typoRed {
    color: red !important;
}

.typoSmall {
    font-size: 16px;
    font-weight: 400;
    line-height: 19.2px;
    color: #2A3647;
}

.titleStar {
    display: flex;
    flex-direction: row;
}

.border {
    height: 424px;
    width: 1px;
    background-color: #D1D1D1;
}

.prioBox {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    gap: 8px;
    margin-bottom: 24px;
}

.prioButton {
    width: 136px;
    height: 56px;
    padding: 16px 10px 16px 10px;
    border-radius: 10px;
    gap: 8px;
    background-color: white;
    border: solid 1px #D1D1D1;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    cursor: pointer;
}

.prioButtonMedium:hover {
    background-color: #FFA800 !important;
    color: #F6F7F8 !important;
    border: solid 1px #FFA800 !important;
}

.prioButtonUrgent:hover {
    background-color: #FF3D00 !important;
    color: #F6F7F8 !important;
    border: solid 1px #FF3D00 !important;
}

.prioButtonLow:hover {
    background-color: #7AE229 !important;
    color: #F6F7F8 !important;
    border: solid 1px #7AE229 !important;
}

.prioButtonMedium:hover .iconMedium {
    filter: brightness(0) invert(1);
}

.prioButtonUrgent:hover .iconPrio {
    filter: brightness(0) invert(1);
}

.prioButtonLow:hover .iconPrio {
    filter: brightness(0) invert(1);
}


.prioButtonBox {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    width: 440px;
}

.category {
    position: relative;
}

.dropDownMenuArrow {
    border-radius: 50px;
    position: absolute;
    right: 13px;
    top: 10px;
    z-index: 999;
}

.dropDownMenuArrow:hover {
    background-color: #F9F9F9;
}

.dropDownCategoryOpened {
    display: flex;
    flex-direction: column;
    position: absolute;
    top: 31px;
    width: 440px;
    z-index: 1;
}

.dropDownOption {
    padding: 12px 16px;
    width: 100%;
    border-radius: 10px;
}

.dropDownOption:hover {
    background-color: #F9F9F9;
}

.rotated {
    transform: rotate(180deg);
}

.subtask {
    height: 80px;
    display: flex;
}

.buttonClear {
    width: 110px;
    height: 56px;
    padding: 16px;
    border-radius: 10px;
    gap: 4px;
    background-color: #F6F7F8;
    border: 1px solid #2A3647;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    font-size: 20px;
    line-height: 24px;
    font-weight: 400;
    cursor: pointer;
}

.buttonClear:hover {
    border: 2px solid #29ABE2;
    color: #29ABE2;
    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.2);
}

.buttonClear:hover .iconCross {
    filter: brightness(0) saturate(100%) invert(60%) sepia(74%) saturate(2034%) hue-rotate(165deg) brightness(94%) contrast(87%);
}

.buttonCreate {
    width: 183px;
    height: 56px;
    padding: 16px;
    border-radius: 10px;
    gap: 4px;
    background-color: #2A3647;
    color: #F6F7F8;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    font-size: 21px;
    font-weight: 700;
    border: none;
    cursor: pointer;
}


.buttonCreate:hover {
    background-color: #29ABE2;
    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.2);
}

.icon {
    height: 24px;
    width: 24px;
}

.iconCross {
    height: 24px;
    width: 24px;
}



.iconPrio {
    height: 14.51px;
    width: 20px;
}


.iconMedium {
    height: 7.45px;
    width: 20px;
}

.buttonsRight {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: flex-end;
    width: 309px;
    height: 56px;
    gap: 16px;

}

@media (max-width: 1400px) {
    .lowerSection {
        margin-top: 46px;
    }

    .mainSection {
        flex-direction: column;
        margin-bottom: 175px;
    }

    .border {
        display: none;
    }

    form {
        display: flex;
        flex-direction: column;
    }

    .prioBox {
        order: -1;
        position: relative;
        bottom: 112px;

    }

    .date {
        position: relative;
        bottom: 112px;
    }

    .category {
        bottom: 112px;
    }

    .assigned {
        position: relative;
        top: 336px;
    }

    .inputAssigned {
        z-index: 1;
    }

    .section-left {
        align-items: flex-start;
    }
}

@media (max-width: 940px) {
    main h1 {
        padding: 48px 0 8px 0px;
    }

    main {
        padding-left: 16px;
        padding-right: 16px;
    }
}

@media (max-width: 555px) {
    .buttonClear {
        display: none;
    }

    .buttonsRight {
        width: auto;
    }

    .lowerSection {
        z-index: 999;
    }

    .lowerSection {
        flex-direction: row;
        align-items: center;
        justify-content: space-between;
        gap: 0px;
        position: fixed;
        bottom: 76px;
        left: 0px;
        right: 0px;
        padding: 16px 24px 16px 24px;
        background-color: #F6F7F8;
        height: 88px;
        margin: 0px 0px 0px 0px;
    }
}

@media (max-width: 500px) {

    .buttonsRight {
        width: fit-content;
        gap: 0px;
    }

    main h1 {
        position: fixed !important;
        top: 80px;
        left: 0px;
        padding-left: 16px;
        background-color: #F6F7F8;
        z-index: 1;
        width: 100%;
        height: 112px;
    }

    .mainSection {
        padding-top: 91px;
    }

    header {
        z-index: 100;
    }

    .typoSmall {
        font-size: 12px;
    }
}

@media (max-width: 480px) {
    .prioButtonBox {
        flex-direction: column;
        gap: 8px;
        width: auto;
    }

    .prioButton {
        width: 200px;
    }

    .assigned {
        top: 472px;
    }

    .inputField {
        max-width: 295px;
    }

    .sectionLeft {
        width: auto;
        align-items: flex-start;
    }

    .inputBox {
        width: auto;
    }
}

@media (max-width: 440px) {
    main h1 {
        padding-left: 6px;
    }
}

